# GeoWarlock

./: .gitignore  README.md  batch_test.py  batch_test_all.py  batch_test_dino.py  batch_test_frozen_dino.py  batch_test_multimodal.py  batch_test_vit.py  geowarlock_city_guesser.py  inference.py  inspect_ocr.py  main.py  main_dino.py  main_frozen_dino.py  main_multimodal.py  main_vit.py  optimized_ocr_pipeline.py  pyproject.toml
