[project]
name = "geowarlock"
version = "0.1.0"
description = "Multimodal geolocation model using ViT + OCR"
authors = ["Augusto Mattei Grohmann", "Angelo Fernandes Oliveira"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "easyocr",
    "langdetect",
    "numpy",
    "pandas",
    "scikit-learn",
    "pillow",
    "matplotlib",
    "tqdm>=4.67.1",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
    "black",
]
