[project]
name = "geowarlock"
version = "0.1.0"
description = "Geolocalização com modelos ViT16 e DinoV2"
authors = [{name = "Augusto Mattei Grohmann"}, {name = "Angelo Fernandes Oliveira"}]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "torch",
    "torchvision",
    "numpy<2",
    "pandas",
    "scikit-learn",
    "pillow",
    "tqdm>=4.67.1",
    "xformers>=0.0.22",
    "customtkinter>=5.2.2",
]
